feat: add a div for the alert portal

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="portal"></div>
+    <div id="modal"></div>
+    <div id="alert"></div>
     <script type="module" src="/src/root/main.tsx"></script>
   </body>
 </html>
