--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <div id="modal"></div>
-    <div id="alert"></div>
-    <script type="module" src="/src/root/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
